syntax = "proto3";

option csharp_namespace = "EventService.Protos";

package event;

service EventGrpcService {
  rpc GetEventById (GetEventRequest) returns (EventResponse);
}

message GetEventRequest {
  string event_id = 1;
}

message Event {
	string event_id = 1;
	string event_name = 2;
	string event_category = 3;
	string event_date = 4; 
	string event_time = 5;
	repeated Ticket tickets = 6;
	string event_owner_name = 7;
	string event_owner_email = 8;
	string event_owner_address = 9;
	string event_owner_phone = 10;
}

message Ticket {
  string ticket_id = 1;
  string ticket_category = 2;
  double ticket_price = 3;
  int32 ticket_quantity = 4;
}

message EventResponse {
	Event event = 1;
}